fixed some issues dark mode related

--- a/style.css
+++ b/style.css
@@ -449,6 +449,7 @@ body.dark-mode #contact-form input[type="submit"] {
   margin:0 ;
   padding: 50px;;
   border-radius: 20px;
+  background-color: aliceblue;
 }
 
 .h2index{
@@ -472,9 +473,16 @@ label {
   font-weight: bold;
   color: #555;
 }
-
-.input {
+.checkoutinput{
   width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  font-size: 16px;
+}
+.input {
+  width: fit-content;
   padding: 10px;
   margin-bottom: 20px;
   border: 1px solid #ccc;
